# celebrity-faces

./: .gitignore  README.md  mlartifacts.dvc  mlflow.db.dvc  pyproject.toml  requirements.txt
.dvc/: config
notebooks/: celebrity-clf.ipynb
src/celebrity_faces/: evaluate.py  ingest.py  pipeline.py  predict.py  train.py
src/celebrity_faces/config/: config.py
src/celebrity_faces/data/: .gitignore  raw.dvc  test.dvc  train.dvc  validation.dvc
src/celebrity_faces/model/keras_ckpt/: baseline.weights.h5
